[project]
name = "pytket-docs-theming"
version = "0.1.0"
description = "Dependencies for the pytket extensions documentation"

authors = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" }
]
maintainers = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]

readme = "README.md"
dependencies = [
    "Sphinx ~= 8.0.2",
    "sphinx-autodoc-typehints ~= 2.2.3",
    "sphinx-copybutton ~= 0.5.2",
    "enum-tools[sphinx] ~= 0.12.0",
    "furo ~= 2024.8.6",
    "myst-nb ~= 1.1.1",
    "sphinxcontrib-googleanalytics ~= 0.4",
]

[build-system]
#requires = ["uv_build>=0.7.13,<0.8.0"]
#build-backend = "uv_build"
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
